# doef

./: .gitignore  pyproject.toml
2024/seminars/python_sem/: opt_cont.ipynb  var_calc.ipynb  var_calc_func.py
